UX: Prevent context menu overflow outside of container

--- a/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
+++ b/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
@@ -51,6 +51,10 @@
   list-style: none;
   z-index: 999;
 
+  &.out-of-bounds {
+    visibility: hidden;
+  }
+
   ul {
     margin: 0;
     list-style: none;
